event-planner-front/src/index.css
:root {
    --white: #FFFFFF;
    --background-white: #F1F6F9;
    --black: #263147;
    --lightgray: #b4bbca;
    --gray: #858fa4;
    --darkgray: #656e82;
    --green: #00B94F;
    --red: #E02B4C;
    --yellow: #EBB428;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 62.5%;
}

body {
    font-family: 'Roboto', sans-serif;
    font-weight: 400;
    line-height: 1;
    color: var(--black);
    background-color: var(--background-white);
}

ul {
    list-style: none;
}

.heading--primary, .heading--secondary {
    font-weight: 700;
    font-family: 'Ubuntu', sans-serif;
    color: var(--black);
    letter-spacing: -0.5px;
}

.heading--primary {
    font-size: 4.8rem;
    line-height: 1.05;
    margin-bottom: 3.2rem;
}

.heading--secondary {
    font-size: 3.6rem;
    line-height: 1.2;
    margin-bottom: 2.2rem;
}

.container {
    max-width: 112rem;
    padding: 3.2rem;
    margin: 0 auto;
}

.flex {
    display: flex;
}

.flex--centered {
    justify-content: center;
    align-items: center;
}

.grid {
    display: grid;
}

.grid--3-cols {
    grid-template-columns: repeat(3, 1fr);
}

